# padd-eink

./: .gitignore  README-service.md  README.md  padd-eink.service-example  pyproject.toml
src/padd_eink/: __init__.py  __main__.py  eink_display.py  padd_eink.tcss  tui.py  utils.py
