[project]
name = "padd-eink"
version = "1.0.0"
authors = [
  { name="Sean Ostermann", email="sean@osty.ca" },
]
description = "A PADD-inspired e-ink display for Pi-hole v6 statistics on a Raspberry Pi."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]

keywords = ["pihole", "e-ink", "epaper", "raspberrypi", "monitoring", "padd"]

dependencies = [
    "pihole6api",
    "python-dotenv",
    "Pillow",
    "gpiozero; platform_machine == 'armv7l' or platform_machine == 'aarch64' or platform_machine == 'armv6l'",
    "lgpio; platform_machine == 'armv7l' or platform_machine == 'aarch64' or platform_machine == 'armv6l'",
    "richcolorlog",
    "waveshare-epaper; platform_machine == 'armv7l' or platform_machine == 'aarch64' or platform_machine == 'armv6l'",
    "qrcode",
    "textual",
    "lastversion",
    "apscheduler",
]

[project.urls]
"Homepage" = "https://github.com/falkyre/padd-eink"
"Bug Tracker" = "https://github.com/falkyre/padd-eink/issues"

# This section creates the command-line tool, now named 'padd-eink'
[project.scripts]
padd-eink = "padd_eink.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/padd_eink"]

